# skill-pilot

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  DOCTOR-MESSAGE-GUIDE.md  PR_DESCRIPTION.md  README.md  SETUP.md  config  enroll-flow-feedback.md  ideas.md  install.sh  request.md  skillpilot.sh
core/engine/: agent_sessions.py  ai_cost_config.py  app_factory.py  chrome_proxy.py  code_executor.py  course_manager.py  course_utils.py  discord_bot.py  discord_session.py  exec_argv.py  file_realtime.py  image_service.py  json5_io.py  llm.py  llm_agent_security.md  llm_service.py  logger.py  main.py  pyproject.toml  routes.py  routes_codeware.py  routes_config.py  routes_coreware.py  routes_file_manager.py  routes_integrations.py  routes_shared.py  scheduler.py  session_agent_store.py  settings.py  socket_service.py  tts_service.py  workflow_editor_utils.py  worktree_utils.py
core/engine/data/: AGENTS.md  README.md  showcases.json5  terms.json
core/engine/dev_swarm/: agent.py  documents.py  project.py  router.py  stages.py
core/engine/hooks/: agent_stop.py  dialog_recorder.py  env_guard.py  history_export.py  opencode_event.py  session_end.py  session_start.py  user_prompt.py
core/engine/mcp_servers/: live_tts.py
core/engine/mcp_servers/cameras/: camera_manager.py  detection.py  main.py  requirements-human-detection.txt  tools.py  webrtc_service.py
core/engine/mcp_servers/live_tts/: main.py
core/engine/safe_dotenv/: __init__.py  manage.py
core/engine/skill_pilot_agent/: README.md  __init__.py  agent.py  agents_md.py  bash_tool.py  cli.py  ignore_rules.py  main.py  skills.py
core/engine/strapi4/: __init__.py  cms.py
core/engine/tests/: test_agent_cli_llm_adapter.py  test_agent_sessions.py  test_cpu_video.py  test_create_video.py  test_dialog_recorder_hooks.py  test_env_guard_hook.py  test_explore_create_assets.py  test_explore_template_files.py  test_file_manager_routes.py  test_html2image.py  test_llm_service.py  test_mcp_to_skills_cli.py  test_media_mcp.py  test_media_script_executor.py  test_model_effort_selection.py  test_run_workflow_cli.py  test_scene_types.py  test_skill_pilot_agent_cli.py  test_subagent_install.py  test_tmux_heartbeat.py  test_tmux_webui_cleanup.py  test_video_style_voice.py
core/engine/tools/: local_openai_infer.py  mac_screen_drawing.py  mac_screen_recording.py  subagent_install.py  use_computer.py
core/engine/workflow/: VideoStyle.py  __init__.py  course_planner.py  llm_adapter.py  update.md  video_creator.py
(+1867 files in other folders)
