[project]
name = "webui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "apscheduler>=3.10",
    "aiohttp>=3.11.0",
    "fastmcp>=0.1.0",
    "fastapi>=0.115.0",
    "google-genai>=1.30.0",
    "json5>=0.12.1",
    "json-repair>=0.30.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.60",
    "markdown>=3.7",
    "openai>=1.66.0",
    "Pillow>=10.4.0",
    "playwright>=1.48.0",
    "python-dotenv>=1.0.1",
    "python-socketio>=5.11.0",
    "python-multipart>=0.0.22",
    "typing-extensions>=4.12.0",
    "PyYAML>=6.0.2",
    "uvicorn[standard]>=0.30.0",
    "paramiko>=4.0.0",
    "py-cord==2.6.1",
    "sshtunnel>=0.4.0",
    "pyautogui>=0.9.54",
    "pyobjc-core>=10.3.2; platform_system == 'Darwin'",
    "pyobjc-framework-Cocoa>=10.3.2; platform_system == 'Darwin'",
    "screeninfo>=0.8.1",
    "numpy>=2.4.2",
    "pyaudio>=0.2.14",
    "aiortc>=1.14.0",
    "av>=16.1.0",
    "onvif-python>=0.2.10",
]
