[project]
name = "skill-pilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "apscheduler>=3.10",
    "aiohttp>=3.13.4",
    "fastmcp>=3.2.0",
    "fastapi>=0.115.0",
    "google-genai>=1.30.0",
    "json-five==1.1.1",
    "json-repair>=0.30.0",
    "langchain>=0.3.0",
    "langchain-core>=1.3.3",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=1.1.14",
    "langgraph>=0.2.60",
    "markdown>=3.7",
    "openai>=1.66.0",
    "Pillow>=12.2.0",
    "playwright>=1.48.0",
    "python-dotenv>=1.2.2",
    "python-socketio>=5.11.0",
    "python-multipart>=0.0.27",
    "typing-extensions>=4.12.0",
    "PyYAML>=6.0.2",
    "uvicorn[standard]>=0.30.0",
    "paramiko>=5.0.0",
    "py-cord==2.6.1",
    "sshtunnel>=0.4.0",
    "pyautogui>=0.9.54",
    "pyobjc-core>=10.3.2; platform_system == 'Darwin'",
    "pyobjc-framework-Cocoa>=10.3.2; platform_system == 'Darwin'",
    "screeninfo>=0.8.1",
    "numpy>=2.4.2",
    "aiortc>=1.14.0",
    "av>=16.1.0",
    "onvif-python>=0.2.10",
    "markitdown[docx,pdf,pptx,xls,xlsx,youtube-transcription]>=0.1.5",
    "openai-agents>=0.14.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
